--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -132,6 +132,7 @@ img {
 .grid {
   display: grid;
   gap: 1.25rem;
+  justify-content: space-evenly;
 }
 
 .main {
@@ -172,14 +173,14 @@ img {
 .nav {
   height: var(--header-height);
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
 }
 
 .nav__logo {
   color: var(--first-color);
   font-weight: var(--font-medium);
-  transition: .4s;
+  transition: 0.4s;
 }
 
 .nav__logo:hover {
@@ -189,7 +190,7 @@ img {
 .nav__menu {
   position: fixed;
   bottom: 1rem;
-  background-color: hsla(var(--second-hue), 32%, 16%, .8);
+  background-color: hsla(var(--second-hue), 32%, 16%, 0.8);
   width: 90%;
   border-radius: 4rem;
   padding: 1rem 2.25rem;
@@ -205,16 +206,18 @@ img {
 .nav__link {
   color: var(--text-color);
   font-size: 1.25rem;
-  padding: .4rem;
+  padding: 0.4rem;
   display: flex;
   border-radius: 5rem;
 }
 
 /* Active link */
 .active-link {
-  background: linear-gradient(180deg,
-      hsla(var(--first-hue), var(--sat), var(--lig), 1),
-      hsla(var(--first-hue), var(--sat), var(--lig), .2));
+  background: linear-gradient(
+    180deg,
+    hsla(var(--first-hue), var(--sat), var(--lig), 1),
+    hsla(var(--first-hue), var(--sat), var(--lig), 0.2)
+  );
   box-shadow: 0 0 16px hsla(var(--first-hue), var(--sat), var(--lig), 0.4);
 }
 
@@ -241,7 +244,7 @@ img {
 .home__greeting {
   display: block;
   color: var(--title-color);
-  margin-bottom: .25rem;
+  margin-bottom: 0.25rem;
 }
 
 .home__education {
@@ -261,9 +264,11 @@ img {
   justify-self: center;
   width: 190px;
   height: 240px;
-  background: linear-gradient(180deg,
-      hsla(var(--first-hue), var(--sat), var(--lig), 1),
-      hsla(var(--first-hue), var(--sat), var(--lig), .2));
+  background: linear-gradient(
+    180deg,
+    hsla(var(--first-hue), var(--sat), var(--lig), 1),
+    hsla(var(--first-hue), var(--sat), var(--lig), 0.2)
+  );
   border-radius: 10rem 10rem 1rem 1rem;
   display: flex;
   align-items: flex-end;
@@ -287,27 +292,27 @@ img {
   bottom: 5rem;
   left: 0;
   display: grid;
-  row-gap: .5rem;
+  row-gap: 0.5rem;
 }
 
 .home__social-link {
   width: max-content;
   background-color: var(--container-color);
   color: var(--first-color);
-  padding: .25rem;
-  border-radius: .25rem;
+  padding: 0.25rem;
+  border-radius: 0.25rem;
   display: flex;
   font-size: 1rem;
-  transition: .4s;
+  transition: 0.4s;
 }
 
-.homer__social-link:hover{
+.homer__social-link:hover {
   background-color: var(--first-color);
   color: #fff;
 }
 
-.home__social::after{
-  content: '';
+.home__social::after {
+  content: "";
   width: 32px;
   height: 2px;
   background-color: var(--first-color);
