--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -332,8 +332,8 @@ body.light-theme{
 
 .home__handle {
   justify-self: center;
-  width: 190px;
-  height: 245px;
+  width: 150px;
+  height: 225px;
   background: linear-gradient(180deg,
       hsla(var(--first-hue), var(--sat), var(--lig), 1),
       hsla(var(--first-hue), var(--sat), var(--lig), .2)
@@ -906,11 +906,11 @@ border-radius: 1.5rem;
     flex-direction: column;
   }
   .home__handle{
-    width: 150px;
+    width: 50px;
     height: 253px;
   }
   .home__img{
-    width: 130px;
+    width: 300px;
   }
 
   .about__info{
@@ -939,6 +939,10 @@ border-radius: 1.5rem;
 
 /* For medium devices */
 @media screen and (min-width: 499px) {
+
+  .home__img{
+    width: 320px;
+  }
   .nav__menu{
     width: 328px;
     left: 0;
@@ -1025,7 +1029,7 @@ border-radius: 1.5rem;
     height: 400px;
   }
   .home__img{
-    width: 220px;
+    width: 320px;
   }
   .home__social-link{
     padding: .4rem;
