--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -537,6 +537,8 @@ body.light-theme{
   background-color: var(--container-color);
   padding: 3rem 1.5rem 1.5rem;
   border-radius: 1rem;
+
+  
 }
 
 .services__title{
@@ -846,14 +848,14 @@ border-radius: 1.5rem;
 
 .footer__title{
   text-align: center;
-  margin-bottom: 2rem;
+  margin-bottom: 1.5rem;
 }
 
 .footer__list{
   display: flex;
   justify-content: center;
   column-gap: 1.5rem;
-  margin-bottom: 2rem;
+  margin-bottom: 1.5rem;
 }
 
 .footer__social{
@@ -873,7 +875,7 @@ border-radius: 1.5rem;
 
 .footer__copy{
   display: block;
-  margin-top: 4.5rem;
+  margin-top: 2rem;
   color: var(--container-color);
   text-align: center;
   font-size: var(--smaller-font-size);
@@ -996,13 +998,13 @@ border-radius: 1.5rem;
 
 @media screen and (min-width: 767px) {
   .work_container{
-    grid-template-columns: repeat(2, max-content);
+    grid-template-columns: repeat(3, 2fr);
   }
 
   .contact__container{
-    grid-template-columns: repeat(2, max-content);
+    /* grid-template-columns: repeat(2, max-content); */
     justify-content: center;
-    column-gap: 3rem;
+    /* column-gap: 3rem; */
   }
 }
 
@@ -1022,6 +1024,13 @@ border-radius: 1.5rem;
 
   .nav{
     height: calc(var(--header-height) + 1rem);
+  }
+
+  .nav__menu{
+    width: 428px;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
   }
 
   .home__handle{
@@ -1071,7 +1080,9 @@ border-radius: 1.5rem;
   }
 
   .services__container{
-    grid-template-columns: repeat(3, 192px);
+    grid-template-columns: repeat(3, 250px);
+    /* display: flex; */
+    justify-content: center;
     column-gap: 3rem;
   }
   .services__card{
@@ -1099,8 +1110,16 @@ border-radius: 1.5rem;
   }
 
   .contact__container{
-    column-gap: 6rem;
+    /* column-gap: 6rem; */
+    grid-template-columns: repeat(2, max-content);
   }
+  .contact__info{
+    grid-template-columns: repeat(3, 250px);
+    /* display: flex; */
+    justify-content: center;
+    column-gap: 3rem;
+  }
+  
 
   .footer__social-link{
     font-size: 2rem;
